# niubii

./: .env.example  Dockerfile  README.md  TRADING_DASHBOARD_PLAN.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-research.txt  requirements.txt
app/: dashboard_core.py  main.py  page_utils.py  shared_state.py
app/components/: __init__.py  charts.py  theme.py  ui_components.py
app/pages/: 10_🔔_Alerts.py  11_🔍_Research.py  1_📈_Market_Insights.py  2_📡_Signals.py  3_🛡️_Risk.py  4_💼_Trade_Entry.py  5_📋_Blotter.py  6_📊_Analytics.py  7_🤖_ML_Signals.py  8_🔬_Backtest.py  9_🤖_Automation.py
app/ui/: __init__.py  views.py
config/: alerts.yaml  bloomberg_tickers.yaml  data_loader.yaml  execution.yaml  instruments.yaml
core/: __init__.py  constants.py  indicators.py  utils.py
core/alerts/: __init__.py  engine.py  history.py  rules.py  scheduler.py
core/alerts/channels/: __init__.py  base.py  email.py  slack.py  sms.py  telegram.py
core/analytics/: __init__.py  curves.py  fundamentals.py  spreads.py
core/backtest/: __init__.py  costs.py  engine.py  execution.py  metrics.py  optimization.py  reporting.py  strategy.py
core/data/: __init__.py  bloomberg.py  cache.py  loader.py
core/execution/: __init__.py  algorithms.py  automation.py  oms.py  paper_trading.py  sizing.py
core/execution/brokers/: __init__.py  base.py  simulator.py
core/infrastructure/: __init__.py  audit.py  auth.py  monitoring.py  rbac.py
core/ml/: __init__.py  features.py  monitoring.py  prediction.py  training.py
core/ml/models/: __init__.py  ensemble.py  gradient_boost.py
core/research/: __init__.py  correlations.py  factors.py  regimes.py
core/research/alt_data/: __init__.py  positioning.py  provider.py  satellite.py  shipping.py
core/research/llm/: __init__.py  grok.py  news_analyzer.py  sentiment.py
core/risk/: __init__.py  limits.py  monitor.py  var.py
core/signals/: __init__.py  aggregator.py  fundamental.py  technical.py
core/trading/: __init__.py  blotter.py  pnl.py  positions.py
data/signals/: signal_history.json
deploy/: init-db.sql  nginx.conf  prometheus.yml
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasources.yml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  secrets.yaml  service.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 20241205_000001_initial_schema.py
oil-trading-dashboard/: .env.example  .gitignore  NEXT_STEPS.md  PROGRESS.md  README.md  requirements.txt
oil-trading-dashboard/app/: __init__.py
oil-trading-dashboard/app/components/: __init__.py
oil-trading-dashboard/app/pages/: 1_📈_Market_Insights.py  2_📡_Signals.py  3_🛡️_Risk.py  4_💼_Trade_Entry.py  5_📋_Blotter.py
oil-trading-dashboard/config/: bloomberg_tickers.yaml  risk_limits.yaml
oil-trading-dashboard/core/: __init__.py
oil-trading-dashboard/core/analytics/: fundamentals.py  spreads.py
oil-trading-dashboard/core/data/: __init__.py
oil-trading-dashboard/core/risk/: __init__.py  limits.py
oil-trading-dashboard/core/signals/: aggregator.py  fundamental.py
oil-trading-dashboard/tests/: __init__.py  test_analytics.py  test_risk.py
tests/: test_alerts.py  test_analytics.py  test_backtest.py  test_data.py  test_execution.py  test_infrastructure.py  test_ml.py  test_research.py  test_risk.py  test_signals.py
