[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oil-trading-dashboard"
version = "2.0.0"
description = "Quantitative Oil Trading Dashboard with Bloomberg Integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["oil", "trading", "bloomberg", "quantitative", "finance", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "pyarrow>=14.0.0",
    "diskcache>=5.6.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
research = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
oil-dashboard = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "app*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yaml"]

# =============================================================================
# RUFF - Fast Python Linter
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file (intentional for path setup)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from err (common in wrapper exceptions)
    "B905",   # zip without explicit strict
    "SIM102", # nested if statements (sometimes clearer)
    "SIM108", # use ternary operator
    "ARG001", # unused function argument (common in interfaces/abstract classes)
    "ARG002", # unused method argument (common in interfaces/abstract classes)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]
"app/pages/*" = ["ARG", "E402"]
"core/backtest/strategy.py" = ["ARG", "B027"]
"core/backtest/costs.py" = ["ARG"]
"core/execution/*" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["core", "app"]

# =============================================================================
# BLACK - Code Formatter
# =============================================================================
[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | data
    | models
)/
'''

# =============================================================================
# MYPY - Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
    "blpapi.*",
    "diskcache.*",
    "xgboost.*",
    "lightgbm.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST - Test Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "bloomberg: marks tests requiring Bloomberg connection",
]

# =============================================================================
# COVERAGE - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["core", "app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true
